# bib2xml

./: .buildinfo  .gitignore  README.md  bib2xml.core.html  bib2xml.helper.html  bib2xml.html  bib2xml.logging.html  bib2xml.py  bib2xml.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pybtext_conversion_helper.py  pyproject.toml  search.html  searchindex.js
.doctrees/: bib2xml.core.doctree  bib2xml.doctree  bib2xml.helper.doctree  bib2xml.logging.doctree  bib2xml.utils.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: docs.yaml
_sources/: bib2xml.core.rst.txt  bib2xml.helper.rst.txt  bib2xml.logging.rst.txt  bib2xml.rst.txt  bib2xml.utils.rst.txt  index.rst.txt  modules.rst.txt
docs_src/: conf.py
src/bib2xml/: __init__.py  __main__.py
src/bib2xml/core/: __init__.py  _core.py
src/bib2xml/helper/: __init__.py  _helper.py
tests/: test_import.py
